2008-04-02  Matthew Barnes  <mbarnes@redhat.com>

	* gui/Makefile.am:
	Remove CORBA rules for the old composer.

	* gui/itip-utils.c (comp_from), (comp_to_list), (comp_subject),
	(comp_content_type), (comp_filename), (comp_description),
	(append_cal_attachments), (itip_send_comp), (reply_to_calendar_comp):
	Adapt to new Bonobo-less composer widget.

2008-03-31  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #346555

	* gui/dialogs/calendar-setup.c: (eccp_get_source_color): 
	Fixed a mnemonic conflict. 

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #517492

	* gui/dialogs/calendar-setup.c: (calendar_setup_edit_calendar),
	(calendar_setup_edit_task_list), (calendar_setup_edit_memo_list):
	Set proper dialog caption with New or Properties.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #438613

	* calendar.error.xml: New message "prompt-read-only-cal-editor".
	* gui/dialogs/comp-editor.c: (prompt_and_save_changes),
	(menu_file_save_cb): Use different read-only message when checking
	from contact editor and from calendar UI.

2008-03-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #512543

	* gui/e-day-view.c:
	* gui/e-week-view-event-item.c:
	* gui/e-calendar-view.c:
	* gui/e-calendar-view.h:
	* gui/e-week-view-main-item.c:
	* gui/e-day-view-time-item.c:
	* gui/e-day-view-top-item.c:
	* gui/e-day-view-main-item.c:
	Get rid of ENABLE_CAIRO define.

2008-03-11  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #513951

	* gui/cal-search-bar.c (cal_search_bar_construct):
	* gui/migration.c (create_calendar_sources), (create_task_sources),
	(migrate_calendars), (migrate_tasks), (create_memo_sources):
	* gui/e-memos.c (e_memos_setup_view_menus):
	* gui/tasks-component.c (ensure_sources):
	* gui/gnome-cal.c (gnome_calendar_setup_view_menus):
	* gui/calendar-component.c (ensure_sources):
	* gui/memos-component.c (ensure_sources):
	Adapt to new meaning of xxx_component_peek_base_directory().
