@@ -33,7 +33,9 @@ component_LTLIBRARIES = libevolution-calendar.la
 ecalendarincludedir = $(privincludedir)/calendar/gui
 
 ecalendarinclude_HEADERS =	\
-	e-cal-config.h
+	e-cal-config.h		\
+	e-cal-popup.h		\
+	itip-utils.h
 
 search_files = tasktypes.xml memotypes.xml caltypes.xml
 
